// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with one expense correctly 1`] = `
<div>
  <h2>
    Viewing 1 expense totalling $1.95
  </h2>
</div>
`;

exports[`should render ExpensesSummary with two expenses correctly 1`] = `
<div>
  <h2>
    Viewing 2 expenses totalling $1,096.95
  </h2>
</div>
`;
